--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"name": "alexzshl",
 		"email": "alexzshl@126.com"
 	},
-	"publisher": "alex",
+	"publisher": "alexzshl",
 	"displayName": "TaskHere",
 	"description": "loads vscode tasks to status bar",
 	"version": "1.0.1",
