--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
 	"contributes": {
 		"commands": [
 			{
+				"command": "extension.taskshere.refresh",
+				"title": "refresh",
+				"category": "Tasks Here"
+			},
+			{
 				"command": "extension.taskshere.on",
 				"title": "active",
 				"category": "Tasks Here"
